# economy-watchers-survey

./: .gitignore  LICENSE  README.md  economy-watchers-survey.py  pyproject.toml
.github/workflows/: build-test.yml  bump-version.yml  lint.yml  release.yml  schedule.yml
data/current/: 200001.json  200002.json  200003.json  200004.json  200005.json  200006.json  200007.json  200008.json  200009.json  200010.json  200011.json  200012.json  200101.json  200102.json  200103.json  200104.json  200105.json  200106.json  200107.json  200108.json  200109.json  200110.json  200111.json  200112.json  200201.json  200202.json  200203.json  200204.json  200205.json  200206.json  200207.json  200208.json  200209.json  200210.json  200211.json  200212.json  200301.json  200302.json  200303.json  200304.json  (+276 more)
data/future/: 200001.json  200002.json  200003.json  200004.json  200005.json  200006.json  200007.json  200008.json  200009.json  200010.json  200011.json  200012.json  200101.json  200102.json  200103.json  200104.json  200105.json  200106.json  200107.json  200108.json  200109.json  200110.json  200111.json  200112.json  200201.json  200202.json  200203.json  200204.json  200205.json  200206.json  200207.json  200208.json  200209.json  200210.json  200211.json  200212.json  200301.json  200302.json  200303.json  200304.json  (+276 more)
data/watcher/2000/: 200001_watcher5.csv  200002_watcher5.csv  200003_watcher5.csv  (+9 more)
src/economy_watchers_survey/: __init__.py  crawl.py  create_dataset.py  create_json.py  version.py
tests/: test_economy-watchers-survey.py
utils/: build.sh
(+360 files in other folders)
