[tool.poetry]
name = "economy-watchers-survey"
version = "2025.05.0"
description = "Auto uploader for Economy Watchers Survey data"
authors = ["Masahiro Suzuki <msuzuki9609@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
huggingface-hub = "^0.23.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
